--- a/style.css
+++ b/style.css
@@ -1,11 +1,21 @@
 #calculator{
     width: 500px;
-    height: 600px;
+    height: auto;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    border: 2px solid black;
+    background-color: beige;
 }
 
 #screen{
     height: 100px;
     border: 2px solid black;
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    font-size: 36px;
+    background-color: lightslategray;
+    color: antiquewhite;
 }
 
 #screen,
@@ -22,4 +32,10 @@ button{
     border: 2px solid black;
     height: 100px;
     width: 125px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 24px;
+    border-radius: 4px;
+    background-color: darkslategray;
+    color: antiquewhite;
+    margin: 2px;
 }
